Add main nav bar

--- a/index.html
+++ b/index.html
@@ -10,6 +10,13 @@
 <body>
   <header>
     <h1>Wired &amp; Weird</h1>
+    <nav>
+      <ul style="list-style: none; padding: 0; margin: 0;">
+        <li style="display: inline; margin-right: 15px;"><a href="#">Home</a></li>
+        <li style="display: inline; margin-right: 15px;"><a href="#">Articles</a></li>
+        <li style="display: inline;"><a href="#">Contact</a></li>
+      </ul>
+    </nav>
   </header>
   <main>
     <section id="featured-article">
