--- a/index.html
+++ b/index.html
@@ -12,10 +12,10 @@
     <div class="header-container">
       <h1>Wired &amp; Weird</h1>
       <nav>
-        <ul style="list-style: none; padding: 0; margin: 0;">
-          <li style="display: inline; margin-right: 15px;"><a href="#">Home</a></li>
-          <li style="display: inline; margin-right: 15px;"><a href="#">Articles</a></li>
-          <li style="display: inline;"><a href="#">Contact</a></li>
+        <ul>
+          <li><a href="#">Home</a></li>
+          <li><a href="#">Articles</a></li>
+          <li><a href="#">Contact</a></li>
         </ul>
       </nav>
     </div>
